--- a/Authorization.xaml
+++ b/Authorization.xaml
@@ -3,57 +3,47 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Authorization" Height="290" Width="270" FontFamily="Century Gothic" Closing="MetroWindow_Closing">
+            xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="Authorization" Height="300" Width="270" FontFamily="Century Gothic" Closing="MetroWindow_Closing">
     <Window.Resources>
-        <!--Style TargetType="{x:Type Dialog:MessageDialog}" BasedOn="{StaticResource {x:Type Dialog:BaseMetroDialog}}">
-            <Style.Resources>
-                <Style BasedOn="{StaticResource MetroFlatButton}" TargetType="{x:Type Button}">
-                    <Setter Property="Controls:ControlsHelper.ContentCharacterCasing" Value="Upper" />
-                </Style>
-
-                <Style x:Key="AccentedDialogSquareButton"
-                BasedOn="{StaticResource MetroFlatButton}"
-                TargetType="{x:Type Button}">
-                    <Setter Property="Background" Value="MediumTurquoise" />
-                    <Setter Property="Foreground" Value="{DynamicResource IdealForegroundColorBrush}" />
-                    <Setter Property="Controls:ControlsHelper.ContentCharacterCasing" Value="Upper" />
-                </Style>
-
-                <Style x:Key="AccentedDialogHighlightedSquareButton"
-                BasedOn="{StaticResource MetroFlatButton}"
-                TargetType="{x:Type Button}">
-                    <Setter Property="Background" Value="{DynamicResource HighlightBrush}" />
-                    <Setter Property="Foreground" Value="{DynamicResource IdealForegroundColorBrush}" />
-                    <Setter Property="Controls:ControlsHelper.HeaderFontWeight" Value="Bold" />
-                </Style>
-            </Style.Resources>
-        </-->
-
     </Window.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="47*"/>
-            <ColumnDefinition Width="168*"/>
-            <ColumnDefinition Width="47*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="12*"/>
-            <RowDefinition Height="19*"/>
-            <RowDefinition Height="87*"/>
-            <RowDefinition Height="12*"/>
-        </Grid.RowDefinitions>
-        <Label Grid.Row="1" Content="Авторизация" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" Grid.Column="1"/>
-        <StackPanel Grid.Row="2" Grid.Column="1" VerticalAlignment="Center">
-            <Label Content="Логин" FontSize="14"/>
-            <TextBox x:Name="LoginBox" FontSize="14"/>
-            <Label Content="Пароль" FontSize="14"/>
-            <PasswordBox x:Name="PasswordBox" Margin="0,0,0,20" FontSize="14"/>
-            <Button Content="Авторизироваться" Click="Button_ClickAsync"/>
-            <!--Button Content="Авторизироваться" Background="PaleTurquoise" Foreground="White" FontSize="14" Click="Button_Click" BorderBrush="#FF68D7D3"/-->
-        </StackPanel>
-       
-    </Grid>
+    <materialDesign:DialogHost>
+        <materialDesign:DialogHost.DialogContentTemplate>
+            <DataTemplate DataType="local: TextBlock">
+                <Grid Width="{Binding ActualWidth, ElementName=MainGrid}">
+                    <Grid Margin="20">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <TextBlock TextWrapping="Wrap" Text="{Binding Text}" Grid.Row="0" Margin="0,0,0,10"/>
+                        <Button Grid.Row="1" Click="DialogClose">Закрыть</Button>
+                    </Grid>
+                </Grid>
+            </DataTemplate>
+        </materialDesign:DialogHost.DialogContentTemplate>
+        <Grid x:Name="MainGrid">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="25*"/>
+                <ColumnDefinition Width="168*"/>
+                <ColumnDefinition Width="25*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="12*"/>
+                <RowDefinition Height="19*"/>
+                <RowDefinition Height="87*"/>
+                <RowDefinition Height="12*"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="1" Content="Авторизация" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" Grid.Column="1"/>
+            <StackPanel Grid.Row="2" Grid.Column="1" VerticalAlignment="Center">
+                <Label Content="Логин" FontSize="14"/>
+                <TextBox x:Name="LoginBox" FontSize="14"/>
+                <Label Content="Пароль" FontSize="14"/>
+                <PasswordBox x:Name="PasswordBox" Margin="0,0,0,20" FontSize="14"/>
+                <Button Content="Авторизироваться" Click="Button_ClickAsync"/>
+            </StackPanel>
+        </Grid>
+    </materialDesign:DialogHost>
 </Window>
