--- a/Registration.xaml
+++ b/Registration.xaml
@@ -1,14 +1,12 @@
-﻿<Window
-        x:Class="WpfApp1.Registration"
+﻿<Window x:Class="WpfApp1.Registration"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Registration" Height="290" Width="270" FontFamily="Century Gothic" WindowStartupLocation="CenterScreen" Closing="MetroWindow_Closing">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="Registration" Height="300" Width="270" FontFamily="Century Gothic" WindowStartupLocation="CenterScreen" Closing="MetroWindow_Closing">
     <Window.Resources>
         <Style TargetType="Button" x:Key="FlatButtonStyle">
             <Setter Property="Background" Value="MediumTurquoise" />
@@ -40,25 +38,41 @@
             </Style.Triggers>
         </Style>
     </Window.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="47*"/>
-            <ColumnDefinition Width="168*"/>
-            <ColumnDefinition Width="47*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="12*"/>
-            <RowDefinition Height="19*"/>
-            <RowDefinition Height="87*"/>
-            <RowDefinition Height="12*"/>
-        </Grid.RowDefinitions>
-        <Label Grid.Row="1" Content="Регистрация" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" Grid.Column="1" />
-        <StackPanel Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" >
-            <Label Content="Логин" FontSize="14"/>
-            <TextBox x:Name="LoginBox" FontSize="14"/>
-            <Label Content="Пароль" FontSize="14"/>
-            <TextBox x:Name="PasswordBox" Margin="0,0,0,20" FontSize="14"/>
-            <Button x:Name="RegistrateBtn" Style="{StaticResource FlatButtonStyle}" Content="Зарегистрироаваться" Click="RegistrateBtn_Click"/>
-        </StackPanel>
-    </Grid>
+    <materialDesign:DialogHost>
+        <materialDesign:DialogHost.DialogContentTemplate>
+            <DataTemplate DataType="local: TextBlock">
+                <Grid Width="{Binding ActualWidth, ElementName=MainGrid}">
+                    <Grid Margin="20">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <TextBlock TextWrapping="Wrap" Text="{Binding Text}" Grid.Row="0" Margin="0,0,0,10"/>
+                        <Button Grid.Row="1" Click="DialogClose">Закрыть</Button>
+                    </Grid>
+                </Grid>
+            </DataTemplate>
+        </materialDesign:DialogHost.DialogContentTemplate>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="25*"/>
+                <ColumnDefinition Width="168*"/>
+                <ColumnDefinition Width="25*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="12*"/>
+                <RowDefinition Height="19*"/>
+                <RowDefinition Height="87*"/>
+                <RowDefinition Height="12*"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="1" Content="Регистрация" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" Grid.Column="1" />
+            <StackPanel Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" >
+                <Label Content="Логин" FontSize="14"/>
+                <TextBox x:Name="LoginBox" FontSize="14"/>
+                <Label Content="Пароль" FontSize="14"/>
+                <TextBox x:Name="PasswordBox" Margin="0,0,0,20" FontSize="14"/>
+                <Button x:Name="RegistrateBtn" Content="Зарегистрироаваться" Click="RegistrateBtn_Click"/>
+            </StackPanel>
+        </Grid>
+    </materialDesign:DialogHost>
 </Window>
