--- a/Afisha.xaml
+++ b/Afisha.xaml
@@ -1,20 +1,33 @@
-﻿<Window x:Class="WpfApp1.Afisha"
+﻿<Window x:Class="Theater.Afisha"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
+        xmlns:local="clr-namespace:Theter"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Afisha" Height="530" Width="800">
-    <Grid Margin="0,30,0,0">
+    <Window.Resources>
+        <Style x:Key="MonthStyle" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedLightButton}">
+            <Setter Property="Background" Value="White"></Setter>
+            <Setter Property="Foreground" Value="Black"></Setter>
+            <Setter Property="BorderBrush" Value="WhiteSmoke"></Setter>
+        </Style>
+    </Window.Resources>
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="31*"/>
             <RowDefinition Height="31*"/>
             <RowDefinition Height="183*"/>
         </Grid.RowDefinitions>
         <Border Grid.Row="0"  Background="Tomato" />
-        <Label Foreground="White" FontFamily="Century" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="338,8" Height="46" Width="116">Афиша</Label>
-        <StackPanel x:Name="month_panel" Grid.Row="1" Orientation="Horizontal"></StackPanel>
+        <Label Foreground="White" FontFamily="Century" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center">Афиша</Label>
+        <Border Grid.Row="1" BorderBrush="Gray" BorderThickness="0 1 0 1">
+        <StackPanel x:Name="month_panel" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Style="{StaticResource MonthStyle}" Margin="0,0,10,0" Width="90" materialDesign:RippleAssist.Feedback="#DD000000">Май</Button>
+            <Button Style="{StaticResource MonthStyle}" Margin="0,0,10,0" Width="90" materialDesign:RippleAssist.Feedback="#DD000000">Июнь</Button>
+            <Button Style="{StaticResource MonthStyle}" Width="90" materialDesign:RippleAssist.Feedback="#DD000000">Июль</Button>
+        </StackPanel></Border>
         <ScrollViewer Grid.Row="2">
             <StackPanel x:Name="performancelist_panel"></StackPanel>
         </ScrollViewer>
