--- a/Authorization.xaml
+++ b/Authorization.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WpfApp1.Authorization"
+﻿<Window x:Class="Theater.Authorization"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
+        xmlns:local="clr-namespace:Theater"
         mc:Ignorable="d"
             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="Authorization" Height="300" Width="270" FontFamily="Century Gothic" Closing="MetroWindow_Closing">
