--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Class="Theater.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
+        xmlns:local="clr-namespace:Theater"
         mc:Ignorable="d"
         Title="MainWindow" Height="481" Width="800" MinWidth="800" MinHeight="481" Loaded="Window_Loaded" FontFamily="Century Gothic">
     <Window.Resources>
@@ -17,7 +17,7 @@
             </Setter>
         </Style>
     </Window.Resources>
-    <Grid Margin="0,15,0,0">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="61*"/>
             <ColumnDefinition Width="199*"/>
@@ -50,10 +50,6 @@
                 </Viewbox>
             </Grid>
         </StackPanel>
-        <!--Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" HorizontalAlignment="Left" VerticalAlignment="Center" Source="Resources\theatreicon.png" Stretch="Uniform" Margin="5"/>
-        <Viewbox Grid.Column="1" Grid.Row="1" HorizontalAlignment ="Left" VerticalAlignment="Center">
-            <TextBlock VerticalAlignment="Center" FontFamily="Verdana" FontSize="14" ><Run Text="Театр имени "/><LineBreak/><Run Text="Ольги Кобылянской"/></TextBlock>
-        </Viewbox-->
         <Viewbox Grid.Column="5" Grid.Row="1" HorizontalAlignment="Right">
             <StackPanel Orientation="Horizontal" Margin="5">
                 <Button Style="{StaticResource ImageButtonStyle}"  Click="Button_Click" Content="Авторизация / " VerticalAlignment="Center"/>
