--- a/Afisha.xaml
+++ b/Afisha.xaml
@@ -3,33 +3,46 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Theter"
+        xmlns:local="clr-namespace:Theater"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Afisha" Height="530" Width="800">
+        Title="Afisha" Height="530" Width="800" FontFamily="Century Gothic">
     <Window.Resources>
         <Style x:Key="MonthStyle" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedLightButton}">
+            <Setter Property="materialDesign:RippleAssist.Feedback" Value="#DD000000"></Setter>
             <Setter Property="Background" Value="White"></Setter>
             <Setter Property="Foreground" Value="Black"></Setter>
             <Setter Property="BorderBrush" Value="WhiteSmoke"></Setter>
+            <Setter Property="Margin" Value="0,0,10,0"></Setter>
+            <Setter Property="Width" Value="95"></Setter>
+            <Setter Property="Height" Value="45"></Setter>
+            <Setter Property="ContentTemplate">
+                <Setter.Value>
+                    <DataTemplate>
+                        <TextBlock x:Name="Description" Text="{Binding}" TextAlignment="Center"></TextBlock>
+                    </DataTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="31*"/>
-            <RowDefinition Height="31*"/>
+            <RowDefinition Height="35*"/>
+            <RowDefinition Height="35*"/>
             <RowDefinition Height="183*"/>
         </Grid.RowDefinitions>
         <Border Grid.Row="0"  Background="Tomato" />
         <Label Foreground="White" FontFamily="Century" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center">Афиша</Label>
         <Border Grid.Row="1" BorderBrush="Gray" BorderThickness="0 1 0 1">
         <StackPanel x:Name="month_panel" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Style="{StaticResource MonthStyle}" Margin="0,0,10,0" Width="90" materialDesign:RippleAssist.Feedback="#DD000000">Май</Button>
-            <Button Style="{StaticResource MonthStyle}" Margin="0,0,10,0" Width="90" materialDesign:RippleAssist.Feedback="#DD000000">Июнь</Button>
-            <Button Style="{StaticResource MonthStyle}" Width="90" materialDesign:RippleAssist.Feedback="#DD000000">Июль</Button>
+                <!--Button Style="{StaticResource MonthStyle}" Content="Декабрь&#xa;2019"></-->
         </StackPanel></Border>
         <ScrollViewer Grid.Row="2">
-            <StackPanel x:Name="performancelist_panel"></StackPanel>
+            <StackPanel x:Name="performancelist_panel">
+                <Grid Height="{Binding ActualHeight, ElementName=performancelist_panel}">
+                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16">Выберите месяц, пъесы по которому вы хотели бы просмотреть</Label>
+                </Grid>
+            </StackPanel>
         </ScrollViewer>
     </Grid>
 </Window>
