--- a/Ticket_purchase.xaml
+++ b/Ticket_purchase.xaml
@@ -40,7 +40,7 @@
                 <Label x:Name="PriceLabel" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center">Цена: 0 грн.</Label>
                 <Button Grid.Row="4" HorizontalAlignment="Center" FontSize="18" IsEnabled="False" x:Name="PurchaseBtn" Click="PurchaseBtn_Click">Заказать билеты</Button>
                 <Viewbox Grid.Row="2">
-                    <local:Scene x:Name="Scene"></local:Scene>
+                    <local:Scene x:Name="Scene" FontFamily="Segoe UI"></local:Scene>
                 </Viewbox>
             </Grid>
             <Grid Grid.Column="2" Margin="10">
